# AtomAgent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
agent_docs/: plan.md  progress.md
agent_docs/notes/: feishu-connection-guide.md  feishu-session-management-mechanism-2026-03-14.md  im-channels-session-workspace-proactive-summary-2026-03-10.md  self-improve-mvp-2026-03-11.md
atom_agent/: __init__.py  __main__.py  config.py  env_config.py
atom_agent/agent/: __init__.py  context.py  loop.py
atom_agent/bus/: __init__.py  events.py  queue.py
atom_agent/channels/: __init__.py  base.py  feishu.py  feishu_session.py  manager.py
atom_agent/cli/: __init__.py  __main__.py  chat.py  management.py
atom_agent/config/: __init__.py  registry.py
atom_agent/daemon/: __init__.py  runtime.py  service.py
atom_agent/gateway/: __init__.py  (+1 more)
examples/: basic_agent.py
tests/: e2e_cli_chat.py  e2e_cli_chat_full.py  e2e_fetch_bash.py  e2e_git_logs.py  test_agent_default_tools.py  test_agent_mcp_lifecycle.py  test_channels_feishu.py  test_channels_manager.py  test_cli_chat.py  test_cli_gateway.py  test_cli_management.py  test_cli_proactive.py  test_cli_skills.py  test_context_proactive_brief.py  test_daemon_service.py  test_feishu_session_router.py  test_gateway_runtime.py  test_logging.py  test_mcp_client.py  test_mcp_config.py  test_memory_store_brief.py  test_proactive_parser.py  test_proactive_runtime.py  test_proactive_scheduler_state.py  test_skills_loader.py  test_tools_bash.py  test_tools_fetch.py  test_tools_mcp.py  test_tools_memory.py
(+53 files in other folders)
